feat: #373 Allow admin user to delete an existing User
